db imports working, yeah

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,9 @@ version = "0.1.0"
 description = "warehouse and analyze Booked Biz revenue data"
 readme = "README.md"
 authors = [{ name = "Kurt", email = "you@example.com" }]
-dependencies = []  # or leave empty if using requirements.txt
+dependencies = [
+    "openpyxl>=3.1.5",
+]  # or leave empty if using requirements.txt
 requires-python = ">=3.10"
 
 [tool.uv]
