full column imports now working.  data has been tested and passed

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "warehouse and analyze Booked Biz revenue data"
 readme = "README.md"
 authors = [{ name = "Kurt", email = "you@example.com" }]
 dependencies = [
+    "datasette>=0.65.1",
     "openpyxl>=3.1.5",
 ]  # or leave empty if using requirements.txt
 requires-python = ">=3.10"
