--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ dependencies = [
     "pytest>=7.0.0",
     "requests>=2.31.0",
     "pandas>=2.0.0",
+    "psutil>=7.0.0",
+    "lxml>=5.4.0",
 ]
 requires-python = ">=3.10"
 
