--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,28 @@
 blinker==1.9.0
+certifi==2025.6.15
+charset-normalizer==3.4.2
 click==8.2.1
+dropbox==12.0.2
 et-xmlfile==2.0.0
 flask==3.1.1
 h11==0.16.0
+idna==3.10
 itsdangerous==2.2.0
 jinja2==3.1.6
 markupsafe==3.0.2
 numpy==2.2.6
 openpyxl==3.1.5
 pandas==2.3.0
+ply==3.11
 python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
 pytz==2025.2
+requests==2.32.4
 ruff==0.11.13
 six==1.17.0
+stone==3.3.1
 typing-extensions==4.14.0
 tzdata==2025.2
+urllib3==2.5.0
 uvicorn==0.34.3
 werkzeug==3.1.3
