--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,58 @@
-annotated-types==0.7.0
+aiofiles==24.1.0
 anyio==4.9.0
+asgi-csrf==0.11
 asgiref==3.8.1
 blinker==1.9.0
+-e file:///opt/apps/ctv-bookedbiz-db
 certifi==2025.6.15
 charset-normalizer==3.4.2
 click==8.2.1
+click-default-group==1.2.4
+datasette==0.65.1
+datasette-cluster-map==0.18.2
+datasette-export==0.1a0
+datasette-leaflet==0.2.2
+datasette-vega==0.6.2
 dropbox==12.0.2
 et-xmlfile==2.0.0
-fastapi==0.115.13
 flask==3.1.1
+flexcache==0.3
+flexparser==0.4
 h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+hupper==1.12.1
 idna==3.10
+iniconfig==2.1.0
 itsdangerous==2.2.0
+janus==2.0.0
 jinja2==3.1.6
+lxml==5.4.0
 markupsafe==3.0.2
-numpy==2.2.6
+mergedeep==1.3.4
+numpy==2.3.1
 openpyxl==3.1.5
+packaging==25.0
 pandas==2.3.0
+pip==25.1.1
+platformdirs==4.3.8
+pluggy==1.6.0
 ply==3.11
-pydantic==2.11.7
-pydantic-core==2.33.2
+psutil==7.0.0
+pygments==2.19.2
+pytest==8.4.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
+python-multipart==0.0.20
 pytz==2025.2
+pyyaml==6.0.2
 requests==2.32.4
-ruff==0.11.13
+setuptools==80.9.0
 six==1.17.0
 sniffio==1.3.1
-starlette==0.46.2
 stone==3.3.1
+tqdm==4.67.1
 typing-extensions==4.14.0
-typing-inspection==0.4.1
 tzdata==2025.2
 urllib3==2.5.0
 uvicorn==0.34.3
