--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,23 +25,15 @@ requires-python = ">=3.10"
 weekly-update = "src.cli.weekly_update:main"
 historical-import = "src.cli.bulk_import_historical:main"
 close-month = "src.cli.close_month:main"
+daily-update = "src.cli.daily_update:main"
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = [
-    "src/cli",
-    "src/database", 
-    "src/importers",
-    "src/models",
-    "src/repositories",
-    "src/reports",
-    "src/services",
-    "src/utils",
-    "src/web"
-]
+# Include the entire src directory as the main package
+packages = ["src"]
 
 [tool.uv]
 # Optional: pin UV-specific settings
