--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "uvicorn>=0.34.3",
     "dropbox",
     "python-dotenv",
+    "anthropic>=0.67.0",
 ]
 requires-python = ">=3.10"
 
