--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "python-dotenv",
     "anthropic>=0.67.0",
     "tqdm>=4.67.3",
+    "requests-unixsocket>=0.2.0",
 ]
 requires-python = ">=3.10"
 
